Fix failing Windows tests.